--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ar.edu.itba.cleancode</groupId>
-	<artifactId>ResilientBackend</artifactId>
+	<artifactId>resilientbackend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ResilientBackend</name>
+	<name>resilientbackend</name>
 	<description>Resilient backend with Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
