Change: first circuit breaker enabled

--- a/pom.xml
+++ b/pom.xml
@@ -16,16 +16,33 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2023.0.0</spring-cloud.version>
+		<resilience4j.version>1.7.1</resilience4j.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
-		</dependency>
+		</dependency-->
+		        <!-- Resilience4j dependencies -->
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot2</artifactId>
+            <version>${resilience4j.version}</version>
+        </dependency>
+
+        <!-- Spring Boot dependencies -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -66,3 +83,18 @@
 	</build>
 
 </project>
+
+
+<!-- 
+https://resilience4j.readme.io/docs/getting-started-3
+
+repositories {
+    jCenter()
+}
+
+dependencies {
+  compile "io.github.resilience4j:resilience4j-spring-boot2:${resilience4jVersion}"
+  // compile "io.github.resilience4j:resilience4j-spring-boot3:${resilience4jVersion}"
+  compile('org.springframework.boot:spring-boot-starter-actuator')
+  compile('org.springframework.boot:spring-boot-starter-aop')
+} -->
