--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- Spring Doc -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
