--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
 			<version>2.2.0</version>
 		</dependency>
 
+		<!-- HATEOAS for Rest -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
